--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: CI Pipeline
 
-# Trigger the workflow on push to any branch or when a pull request is made.
 on:
   push:
     branches:
@@ -11,30 +10,30 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest  # Use Ubuntu as the environment, you can also use windows-latest or macos-latest
-    
+    runs-on: ubuntu-latest  # Use Ubuntu as the environment
+
     steps:
       # Step 1: Checkout code from GitHub repository
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up JDK (Gradle requires Java to build)
+      # Step 2: Set up JDK 11 (AdoptOpenJDK is now replaced with Adoptium Temurin)
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3  # Use v3 for latest setup-java
         with:
           java-version: '11'
-          distribution: 'adoptopenjdk'
+          distribution: 'temurin'  # Use the Adoptium Temurin distribution
 
-      # Step 3: Install Gradle (if not already installed)
+      # Step 3: Install Gradle
       - name: Set up Gradle
         uses: gradle/wrapper-validation-action@v1
         with:
           gradle-wrapper-file: './gradlew'
 
-      # Step 4: Build the project using Gradle
+      # Step 4: Build with Gradle
       - name: Build with Gradle
         run: ./gradlew assemble
 
-      # Step 5: Run tests using Gradle
+      # Step 5: Run tests with Gradle
       - name: Run tests with Gradle
         run: ./gradlew test
